--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -592,12 +592,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44418347-4430-4749-a4fe-e77d02036092",
+   "cell_type": "markdown",
+   "id": "5c9f0e9f-59d4-472d-a7e1-bdcadb198e4a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: `read_n`\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
