--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -597,7 +597,18 @@
    "metadata": {},
    "source": [
     "# Exercise: `read_n`\n",
-    "\n"
+    "\n",
+    "When we iterate over a file, each iteration gives us the next line, up to and including `\\n`. Sometimes, though, we want to read a file in chunks of 2, 5, or 10 lines.\n",
+    "\n",
+    "1. Write `read_n`, that takes two arguments:\n",
+    "    - The name of a file\n",
+    "    - The number of lines we want to get back in each iteration\n",
+    "2. With each iteration, we should get that number of lines back, as a single string.\n",
+    "3. The final iteration can give us fewer lines.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "    "
    ]
   }
  ],
