--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -608,8 +608,19 @@
     "\n",
     "Example:\n",
     "\n",
-    "    "
+    "```python\n",
+    "for one_chunk in read_n('/etc/passwd', 5):\n",
+    "     print(one_chunk) \n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4546766-12ab-4f0e-8da6-cfc41bdccee6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
