--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -620,7 +620,10 @@
    "id": "e4546766-12ab-4f0e-8da6-cfc41bdccee6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_n(filename, n):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
