--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -629,8 +629,7 @@
     "            if output:\n",
     "                yield output\n",
     "            else:\n",
-    "                return\n",
-    "\n"
+    "                return"
    ]
   },
   {
@@ -919,7 +918,21 @@
    "id": "6d3942c2-073a-409d-b384-56b36718bf22",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# let's take n into account\n",
+    "\n",
+    "def read_n(filename, n):\n",
+    "    with open(filename) as f:\n",
+    "        while True:\n",
+    "            output = []\n",
+    "            \n",
+    "            for i in range(n):\n",
+    "                output.append(f.readline()\n",
+    "            if output:\n",
+    "                yield output\n",
+    "            else:\n",
+    "                return"
+   ]
   }
  ],
  "metadata": {
