--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1295,12 +1295,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff8929be-3c3c-40a5-b216-389fb0d5d4ae",
+   "metadata": {},
+   "source": [
+    "# Generator comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "5e2ddbda-db4d-4845-a4dd-02259a4329d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[100, 81, 64, 49, 36, 25, 16, 9, 4, 1, 0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprehension\n",
+    "\n",
+    "[x*x\n",
+    " for x in range(-10, 10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "06427cf2-5c29-44c8-9864-c9ded00b4ed4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# set comprehension\n",
+    "\n",
+    "{x*x\n",
+    " for x in range(-10, 10)}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff71f1e0-ad75-4eb5-ad5a-07d0b820af3d",
+   "id": "8596dbe5-5774-4cb7-97d3-98d3b313edc7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
