--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1352,13 +1352,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8596dbe5-5774-4cb7-97d3-98d3b313edc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{-10: 100,\n",
+       " -9: 81,\n",
+       " -8: 64,\n",
+       " -7: 49,\n",
+       " -6: 36,\n",
+       " -5: 25,\n",
+       " -4: 16,\n",
+       " -3: 9,\n",
+       " -2: 4,\n",
+       " -1: 1,\n",
+       " 0: 0,\n",
+       " 1: 1,\n",
+       " 2: 4,\n",
+       " 3: 9,\n",
+       " 4: 16,\n",
+       " 5: 25,\n",
+       " 6: 36,\n",
+       " 7: 49,\n",
+       " 8: 64,\n",
+       " 9: 81}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# "
+    "# dict comprehension\n",
+    "\n",
+    "{x : x*x\n",
+    " for x in range(-10, 10)}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "10c3e241-e06c-4c3b-8538-df6b6a66c351",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x10cd871d0>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# generator expression / generator comprehension\n",
+    "\n",
+    "g = (x*x\n",
+    " for x in range(-10, 10))\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "53e22fbf-64c3-4ea3-99f2-c72d5dfb2345",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "81\n",
+      "64\n",
+      "49\n",
+      "36\n",
+      "25\n",
+      "16\n",
+      "9\n",
+      "4\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n"
+     ]
+    }
+   ],
+   "source": [
+    "for one_item in g:\n",
+    "    print(one_item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "412b6d7d-647f-42b2-bb9c-9afb13e18f92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
