--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1524,14 +1524,39 @@
    "source": [
     "# we can also use a generator comprehension\n",
     "\n",
-    "'*'.join((str(one_item)\n",
-    "          for one_item in mylist))"
+    "'*'.join(   (str(one_item)\n",
+    "            for one_item in mylist)    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "0f015256-dc0e-434e-b0f4-2571a2e3e7ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10*20*30'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# what about this:\n",
+    "# we can remove the inner parentheses and it works fine!\n",
+    "\n",
+    "'*'.join(   str(one_item)\n",
+    "            for one_item in mylist    )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f015256-dc0e-434e-b0f4-2571a2e3e7ad",
+   "id": "02849bd9-244a-40b5-b84c-4b22aa86b319",
    "metadata": {},
    "outputs": [],
    "source": []
