--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1555,8 +1555,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "02849bd9-244a-40b5-b84c-4b22aa86b319",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = (   print(one_item)\n",
+    "    for one_item in mylist    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "fa6d0a74-e0bf-40cf-936c-eea097c00e3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(g))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a616857-3f06-441c-a746-11ae0ceb884a",
    "metadata": {},
    "outputs": [],
    "source": []
