--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1555,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "id": "02849bd9-244a-40b5-b84c-4b22aa86b319",
    "metadata": {},
    "outputs": [],
@@ -1585,8 +1585,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "8a616857-3f06-441c-a746-11ae0ceb884a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7346fcb-0fdc-400c-90f4-e5d0544cf738",
    "metadata": {},
    "outputs": [],
    "source": []
