--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1615,8 +1615,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "b7346fcb-0fdc-400c-90f4-e5d0544cf738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = {x*x\n",
+    " for x in range(-10, 10)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "16ca4358-29b6-4d8c-9ddd-1e67591ea39e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{64, 1, 0, 100, 36, 4, 9, 16, 81, 49, 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "f3b0e008-20a6-4101-a195-d195ba81842a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "151c364b-b6a8-4e44-bd07-03cd634a7cdd",
    "metadata": {},
    "outputs": [],
    "source": []
