--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1639,7 +1639,7 @@
     }
    ],
    "source": [
-    "print(numbers)"
+    "print(numbers)  # __repr__ "
    ]
   },
   {
@@ -1660,13 +1660,45 @@
     }
    ],
    "source": [
-    "numbers"
+    "numbers   # __str__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "151c364b-b6a8-4e44-bd07-03cd634a7cdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {}\n",
+    "d['a'] = 100    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "51eddbde-d8af-4eed-b50a-8152e089fdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hash('a') % 8"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "151c364b-b6a8-4e44-bd07-03cd634a7cdd",
+   "id": "6f1327da-d25f-4256-9e3e-a57b18051f67",
    "metadata": {},
    "outputs": [],
    "source": []
