--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1696,9 +1696,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47a36d72-93df-41b0-acb0-94dfdb9391d2",
+   "metadata": {},
+   "source": [
+    "# Dict talk by Raymond Hettinger\n",
+    "https://www.youtube.com/watch?v=p33CVV29OG8"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1327da-d25f-4256-9e3e-a57b18051f67",
+   "id": "1c5e528f-b714-43d1-8f66-b5079d44c7e5",
    "metadata": {},
    "outputs": [],
    "source": []
