--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1705,12 +1705,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c5e528f-b714-43d1-8f66-b5079d44c7e5",
+   "cell_type": "markdown",
+   "id": "37040f43-32a0-4429-b1cf-e7797358a9a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Only vowels\n",
+    "\n",
+    "Write a generator expression that returns the vowels (a, e, i, o, and u) from a file\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "```python\n",
+    "for one_item \n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
