--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1716,9 +1716,18 @@
     "Example:\n",
     "\n",
     "```python\n",
-    "for one_item \n",
+    "for one_item in g:\n",
+    "     print(one_item)  \n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9226a637-bcc1-4e4d-8003-51ca419bd036",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
