--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1718,6 +1718,12 @@
     "```python\n",
     "for one_item in g:\n",
     "     print(one_item)  \n",
+    "```\n",
+    "\n",
+    "or\n",
+    "\n",
+    "```python\n",
+    "list(g)\n",
     "```\n"
    ]
   },
