--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1733,7 +1733,11 @@
    "id": "9226a637-bcc1-4e4d-8003-51ca419bd036",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "filenam\n",
+    "[ one_character\n",
+    "  for one_character in one"
+   ]
   }
  ],
  "metadata": {
