--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1729,15 +1729,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "9226a637-bcc1-4e4d-8003-51ca419bd036",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e a a a e o e a i i e i o u e i e o e e e i u i i i e u e o e o e i e i i o a i o i o i e e i e o e e e o e i e o a a e o a i i o a i o a i o a o u e i e o o o i i e e e a e u i a e o o e i i a o a o o i a e o e e i e a o o u i a e u u i o i o o o o a o o u u u i u u i o a a e a a e a e o a e u i a e e o e o e i e a e o u i a e i a a i a a i a a e u i a e i i e i e a o o u u i a e o i o i a i e e a o o o i u i a e e i e o i u a i o e i e a e u i a e e e i i a e o e e i e a e u i a e a o e a o e e i e a a o e u i a e a a u a e u i a e a e e e e e a e o a e u i a e e o e o e i e a e o a e o u i a e e o e e o e o u e a i o a e u i a e a o e a e a e u i a e e o e e o e a e u i a e a e e o e e o a e u i a e o i e e e e i a e e e u i a e e e e e a e u i a e e e a e u i a e e e a e u i a e e e a e u i a e i i e e e a a i o a e u i a e u i i e e a i e e a e u i a e u u i i a o a i a u i a e a i a a i a i e e a e u i a e a e e i a i o e e a e u i a e a a a a e o a i u a i u i a e a a i a i a e o a i u a i u i a e a e a e e e a e u i a e a o e i a i o e a e u i a e i o e e i o e e a e u i a e o i o i a e u i a e o e o e a e o a e u i a e e u i a e e u i e a e u i a e u i a e a e a a e a a e u i a e e a e e e a e e a e a e e u i a e u a e a i a e a i a e u i a e i a e a e a e u i a e a e e e e a e u i a e a e o a e u i a e u o o e a e u i a e o a e u a e o a e a e e i e a o a e u a e u i a e o e a u i o o e u i o a e o a e u i a e e e a e e e a e a e u i a e o a i o o a i o a e o a o a i o u i a e u e a u a i o a e u a u a i o e a e u i a e i e o e u o i e o e a e o a e u i a e a o a e i e e a e u i a e o o o o a e u i a e u u i o e e i e e e a o o u i a e o e o o e o i i a o a e u i a e a u i o u i o a e u i a e o e o e e e a e u i a e e e o i e a i i e a e u i a e a i a i e e o i e i e a e u i a e a i a e e e o a e a o e i e a e u i a e e i e e i e a a e e e e a e u i a e e a u e e e u e e a e u i a e e i o e a e u i a e a a a e o a e u i a e o e u o e o u e i a i o a e u i a e e a i i e o a i i a e o a e u i a e a e i e e e e i e a e o a e u i a e e i e o e e o i e a i i e a e u i a e a i e i e o e e o i e i e a e u i a e a e e i e o e e o a e a o e i e a e u i a e e e o e i e o e e o a e u i a e a o o u e i e o e e o o o u a e u i a e a e a e e a e e i e a e u i a e o e e i a i o o e e i a a e o a e u i a e a u e i e a u e i e a e u i a e i o e i e o e i e a e u i a e i o e i o e a e u i a e u e i o e i o a e o a u e i o u i a e i a o i i a o i a e o a e u i a e a i i e i e a a i u i a e a e e o o u a e u i a e a e o o e a e o o e a e o a e u i a e e u u e e u e a e u i a o e a e a e o u e a e o a o e a u i a e e e o a e e o u e e i e a e u i a e o o a e u i a e o i e a e o i e e e a a u i a e i e i e i e i e a e o a i e i e u i a e a a e e o a a e e o a a a e e o u i a e a i e a e a i e a e a e u i a e o u a e u i a e a e a a e a o u a a e a u i a e i e i e e a i u i a e i o a a i a o e e i a i a e a i o a a i a u i a e a a i a i a e o a a a i u i a e a e o a u i a e i e i e a e o a i e u i a e e a o i i a a i a e o a e a u i a e e o e o e e i o e o e o e i o a e o e o e e i o u i a e i e i i e i a e u i a e i i a e i o i a e a e o a i i a e i o u i a e o o a e o a i a o i u i a e a i a a a e o a a i a u i a e i a o o i a i o a o o i a i o a e o a i a o o i a i o u i a e e o e o a e o a e u i a e e o e a a e e a e o a u i a e a e o u a e e o a e a e o a a e o u a e u i a e o e e a o e e a a e o a o e e a u i a e o e o e e i e a o e u i a e e e a e o a e u i a e u u a e u i a e a i e a e a i e a e a a i e a e u i a e a i a e o a i a e o a a i a e o u i a e o i i a i o o o i i a i o o a e u i a e a i i e e i u a a o i e a e u i a e i o e i o e a i o e u i a e a o u a e a o u e e i e a e u i a e o i e e a e e o i e e a e e a e u i a e a u i o u i o a e i a e i e e a e o a a u i o u i a e e i u e i u a e u i a e e u a e i e e e u a i e a e u a e i e u i a e o a a e o a e u i a e "
+     ]
+    }
+   ],
    "source": [
-    "filenam\n",
-    "[ one_character\n",
-    "  for one_character in one"
+    "filename = '/etc/passwd' \n",
+    "\n",
+    "g = ( one_character\n",
+    "  for one_line in open(filename)\n",
+    "  for one_character in one_line \n",
+    "  if one_character in 'aeiou')\n",
+    "\n",
+    "for one_item in g:\n",
+    "     print(one_item, end=' ')  \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67a8e04d-1d8f-4979-ae0a-ad1ef257babc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
