--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1754,9 +1754,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9a03e57-8fc6-4512-8e92-1f1eac6668c9",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. Threads\n",
+    "2. Multiprocessing\n",
+    "\n",
+    "Resume at :25"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67a8e04d-1d8f-4979-ae0a-ad1ef257babc",
+   "id": "d859bad6-56b0-47dd-b900-78242dab3e28",
    "metadata": {},
    "outputs": [],
    "source": []
