--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1767,12 +1767,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d859bad6-56b0-47dd-b900-78242dab3e28",
+   "cell_type": "markdown",
+   "id": "692e1c53-4574-4c20-944c-4601dde0e94b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "GIL -- global interpreter lock"
+   ]
   }
  ],
  "metadata": {
