--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1771,7 +1771,10 @@
    "id": "692e1c53-4574-4c20-944c-4601dde0e94b",
    "metadata": {},
    "source": [
-    "GIL -- global interpreter lock"
+    "GIL -- global interpreter lock\n",
+    "\n",
+    "only one thread executes at a time\n",
+    "\n"
    ]
   }
  ],
