--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1778,12 +1778,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54ec6782-f760-4075-8f64-8c9888523796",
+   "cell_type": "markdown",
+   "id": "2465a908-b77a-42b1-bea4-90d1945470d7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: File vowels\n",
+    "\n",
+    "1. Define a function, `count_vowels`, that takes a filename as an in"
+   ]
   }
  ],
  "metadata": {
