--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1784,7 +1784,9 @@
    "source": [
     "# Exercise: File vowels\n",
     "\n",
-    "1. Define a function, `count_vowels`, that takes a filename as an in"
+    "1. Define a function, `count_vowels`, that takes a filename as an input. It uses `q.put` to return a  a dictionary with keys a, e, i, o, and u as an output. The values will be integers, the number of times each vowel appears in a file.\n",
+    "2. Use threads to start this function once per file in a directory (or a list of files that you provide). You can use `os.listdir` or `glob.glob`.\n",
+    "3. "
    ]
   }
  ],
