--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1784,10 +1784,21 @@
    "source": [
     "# Exercise: File vowels\n",
     "\n",
-    "1. Define a function, `count_vowels`, that takes a filename as an input. It uses `q.put` to return a  a dictionary with keys a, e, i, o, and u as an output. The values will be integers, the number of times each vowel appears in a file.\n",
-    "2. Use threads to start this function once per file in a directory (or a list of files that you provide). You can use `os.listdir` or `glob.glob`.\n",
-    "3. "
+    "1. Define a function, `count_vowels`, that takes a filename as an input. It uses `q.put` to return a tuple with two elements:\n",
+    "    - the filename\n",
+    "    - a dictionary with keys a, e, i, o, and u as an output. The values will be integers, the number of times each vowel appears in a file.\n",
+    "3. Use threads to start this function once per file in a directory (or a list of files that you provide). You can use `os.listdir` or `glob.glob`.\n",
+    "4. When all of the threads are done, go through the queue and print all of the filenames and the reports they've made.\n",
+    "5. If a file doesn't work (binary, no permission, etc.), then just ignore it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "311254ca-dfe7-4f94-a657-e07333743e92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
