--- a/2024 01January 01.ipynb
+++ b/2024 01January 01.ipynb
@@ -1746,6 +1746,7 @@
     "\n",
     "g = ( one_character\n",
     "  for one_line in open(filename)\n",
+    "  if not one_line.startswith('#')\n",
     "  for one_character in one_line \n",
     "  if one_character.lower() in 'aeiou')\n",
     "\n",
