--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -5,7 +5,10 @@
    "id": "053255ba-5e5e-425b-a388-d059edb715be",
    "metadata": {},
    "source": [
-    "# Agenda"
+    "# Agenda\n",
+    "\n",
+    "1. Threads + multiprocessing with `map`\n",
+    "2. "
    ]
   },
   {
