--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -8,7 +8,8 @@
     "# Agenda\n",
     "\n",
     "1. Threads + multiprocessing with `map`\n",
-    "2. "
+    "2. `asyncio`\n",
+    "3. NumPy"
    ]
   },
   {
