--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -14,8 +14,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "30f83435-5a3f-44ea-b9db-f4ee32091eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list comprehension\n",
+    "\n",
+    "numbers = range(10)\n",
+    "\n",
+    "[one_number ** 2\n",
+    " for one_number in numbers]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "44a12c14-e7bd-42c2-a4cd-9c8669cd3413",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 9, 25, 49, 81]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "numbers = range(10)\n",
+    "\n",
+    "[one_number ** 2               # \n",
+    " for one_number in numbers\n",
+    " if one_number % 2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "014a3c4d-c727-400b-9bff-b85623f33238",
    "metadata": {},
    "outputs": [],
    "source": []
