--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -59,15 +59,44 @@
     "\n",
     "numbers = range(10)\n",
     "\n",
-    "[one_number ** 2               # \n",
+    "[one_number ** 2               # expression ... what we used to use \"map\" for\n",
     " for one_number in numbers\n",
-    " if one_number % 2]"
+    " if one_number % 2]            # condition ... what we used to use \"filter\" for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "014a3c4d-c727-400b-9bff-b85623f33238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 2, 1, 5, 2, 5]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how does map work?\n",
+    "\n",
+    "# we pass map two arguments:\n",
+    "# 1. a function that takes one argument\n",
+    "# 2. an iterable of data\n",
+    "\n",
+    "words = 'this is a bunch of words'.split()\n",
+    "\n",
+    "list(map(len, words))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "014a3c4d-c727-400b-9bff-b85623f33238",
+   "id": "041a99dc-3f89-49ae-bed1-9ea42771e73c",
    "metadata": {},
    "outputs": [],
    "source": []
