--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -95,8 +95,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "041a99dc-3f89-49ae-bed1-9ea42771e73c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 3, 1, 3, 1, 6, 3]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_vowels(s):\n",
+    "    total = 0\n",
+    "\n",
+    "    for one_character in s:\n",
+    "        if one_character in 'aeiou':\n",
+    "            total += 1\n",
+    "\n",
+    "    return total\n",
+    "\n",
+    "words = 'this is a fantastic and enticing and superfabulous sentence'.split()\n",
+    "\n",
+    "list(map(count_vowels, words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86ebca8f-ec50-452b-9a59-072a696358ac",
    "metadata": {},
    "outputs": [],
    "source": []
