--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -127,8 +127,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "86ebca8f-ec50-452b-9a59-072a696358ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 3 1 3 1 6 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(*map(count_vowels, words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "508a83db-c7fd-4726-9110-d7ccd71f995a",
    "metadata": {},
    "outputs": [],
    "source": []
