--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -148,7 +148,12 @@
    "id": "f6771dce-8481-4efd-9058-1a1f7b826638",
    "metadata": {},
    "source": [
-    "# "
+    "# Exercise: Longest words\n",
+    "\n",
+    "1. Write a function that takes a filename (string) as an argument, and returns the longest word found in that file.\n",
+    "2. Use the Executor.map functions (for threads and processes) to call this function on a list of filenames.\n",
+    "3. Print the longest words that you found.\n",
+    "4. Also: How much time does it take to run these? ("
    ]
   }
  ],
