--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -153,8 +153,16 @@
     "1. Write a function that takes a filename (string) as an argument, and returns the longest word found in that file.\n",
     "2. Use the Executor.map functions (for threads and processes) to call this function on a list of filenames.\n",
     "3. Print the longest words that you found.\n",
-    "4. Also: How much time does it take to run these? ("
+    "4. Also: How much time does it take to run these? (You can use `time.time` to get the number of seconds since 1.1.70.)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "918d56d5-66e8-4685-9f98-aca8fa6bca86",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
