--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -184,7 +184,15 @@
    "metadata": {},
    "source": [
     "# `asyncio`\n",
-    "\n"
+    "\n",
+    "Reactor model -- one process and one thread.\n",
+    "\n",
+    "The way it works:\n",
+    "- We put all of our tasks (functions, basically) as elements on a list\n",
+    "- We run a `for` loop on the list, and let each function run a little bit\n",
+    "- When the function ends, we remove it from our list\n",
+    "- We can always add new functions\n",
+    "- "
    ]
   }
  ],
