--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -192,8 +192,16 @@
     "- We run a `for` loop on the list, and let each function run a little bit\n",
     "- When the function ends, we remove it from our list\n",
     "- We can always add new functions\n",
-    "- "
+    "- So long as there are tasks on the list, we re-run our `for` loop from the start"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a936f0b1-0a5f-412e-9e1c-e5a8e05996f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
