--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -192,7 +192,12 @@
     "- We run a `for` loop on the list, and let each function run a little bit\n",
     "- When the function ends, we remove it from our list\n",
     "- We can always add new functions\n",
-    "- So long as there are tasks on the list, we re-run our `for` loop from the start"
+    "- So long as there are tasks on the list, we re-run our `for` loop from the start\n",
+    "\n",
+    "## Advantages\n",
+    "- Many more items can run\n",
+    "- We don't have to worry about thread safety\n",
+    "- We know exactly when a function might be sto"
    ]
   },
   {
