--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -197,7 +197,15 @@
     "## Advantages\n",
     "- Many more items can run\n",
     "- We don't have to worry about thread safety\n",
-    "- We know exactly when a function might be sto"
+    "- We know exactly when a function might be stopped\n",
+    "- We have access to global variables\n",
+    "\n",
+    "## Disadvantages\n",
+    "- No real I/O\n",
+    "- We don't really, directly run our function\n",
+    "- We add two words to Python's vocabulary:\n",
+    "    - `async` -- `async def` creates a function that can be \n",
+    "    - `await`"
    ]
   },
   {
