--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -204,8 +204,8 @@
     "- No real I/O\n",
     "- We don't really, directly run our function\n",
     "- We add two words to Python's vocabulary:\n",
-    "    - `async` -- `async def` creates a function that can be \n",
-    "    - `await`"
+    "    - `async` -- `async def` creates a function that can be run via the event loop\n",
+    "    - `await` -- very similiar to `yield`, in that it says: Whatever is to my right will take a long time, so I'll go to sleep waiting for it"
    ]
   },
   {
