--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -209,12 +209,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a936f0b1-0a5f-412e-9e1c-e5a8e05996f9",
+   "cell_type": "markdown",
+   "id": "04051c9f-bef8-4a4b-bba7-29c34127c44d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next up:\n",
+    "\n",
+    "- More `asyncio`\n",
+    "- NumPy"
+   ]
   }
  ],
  "metadata": {
