--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -216,8 +216,18 @@
     "# Next up:\n",
     "\n",
     "- More `asyncio`\n",
-    "- NumPy"
+    "- NumPy\n",
+    "\n",
+    "Resume at 11:20"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44c5429c-1de2-415d-9116-2ce015e86019",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
