--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -222,12 +222,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44c5429c-1de2-415d-9116-2ce015e86019",
+   "cell_type": "markdown",
+   "id": "84a6b71c-fd0b-4429-b97b-24964e82f562",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Terms\n",
+    "\n",
+    "- `async def` -- syntax used in Python to create a function that, when run, gives us a coroutine back\n",
+    "- coroutine -- the body of a function, along with its stack frame, that we get back from running an `async def`. We can run a coroutine directly with `asyncio.run` or by puttin git"
+   ]
   }
  ],
  "metadata": {
