--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -229,7 +229,10 @@
     "# Terms\n",
     "\n",
     "- `async def` -- syntax used in Python to create a function that, when run, gives us a coroutine back\n",
-    "- coroutine -- the body of a function, along with its stack frame, that we get back from running an `async def`. We can run a coroutine directly with `asyncio.run` or by puttin git"
+    "- coroutine -- the body of a function, along with its stack frame, that we get back from running an `async def`. We can run a coroutine directly with `asyncio.run` or by putting it to the right of `await`.\n",
+    "- task -- a wrapper for a coroutine, placed on the event loop, and executed whenever the event loop wants.\n",
+    "\n",
+    "- "
    ]
   }
  ],
