--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -232,8 +232,19 @@
     "- coroutine -- the body of a function, along with its stack frame, that we get back from running an `async def`. We can run a coroutine directly with `asyncio.run` or by putting it to the right of `await`.\n",
     "- task -- a wrapper for a coroutine, placed on the event loop, and executed whenever the event loop wants.\n",
     "\n",
-    "- "
+    "If I really want to see things run concurrently, then I need to:\n",
+    "- Create several tasks, based on coroutines\n",
+    "- Run all of the tasks as a group\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "346ccbfc-0f14-484b-857d-ef051ff27276",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
