--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -239,9 +239,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e027e16a-912d-4aa8-b8a3-302c08462b3c",
+   "metadata": {},
+   "source": [
+    "# NumPy\n",
+    "\n",
+    "NumPy array:\n",
+    "- Python API\n",
+    "- C implementation\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "346ccbfc-0f14-484b-857d-ef051ff27276",
+   "id": "bde860e8-d6ae-48eb-90b3-4b5f23221a06",
    "metadata": {},
    "outputs": [],
    "source": []
