--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -253,11 +253,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bde860e8-d6ae-48eb-90b3-4b5f23221a06",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d4c9326-ea12-4685-bac9-7ed8d76e5a6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.nparray is the data structure we want\n",
+    "# "
+   ]
   }
  ],
  "metadata": {
