--- a/2024 01January 03.ipynb
+++ b/2024 01January 03.ipynb
@@ -398,11 +398,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f513807e-6a8b-41de-b0a4-d2071df1525b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 25, 33, 61, 32, 52, 97, 91, 40, 66])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# some other ways to create NumPy arrays\n",
+    "\n",
+    "a = np.random.randint(0, 100, 10)    # 10 ints from 0-100\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e4f4d815-8b00-46de-a400-e08084236536",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.29683241, 0.93433433, 0.84712284, 0.47561611, 0.74451551,\n",
+       "       0.85910408, 0.86507627, 0.50345427, 0.43890329, 0.6056343 ])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.random.rand(10)   # 10 floats from 0-1\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0ac7a764-a8e6-42e2-9ff0-7c2313dfb466",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(20)   # all numbers from 0-19\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f19605fb-31e1-455e-8204-f63f707400ff",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# fancy indexing -- I can request multiple indexes\n",
+    "\n",
+    "a = "
+   ]
   }
  ],
  "metadata": {
